Segundo commit main project

--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="./assets/styles/style.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">   
+    <link rel="stylesheet" type="text/css" href="./assets/styles/style.css"> 
     <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
     <title>Jogo da memória</title>
 </head>
@@ -14,12 +13,12 @@
     <div id="gameBoard">
         <!-- <div id="" class="card" data-icon="bootstrap">
             <div class="card_front">      
-            <img id="imagem_boot" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/bootstrap/bootstrap-original.svg"/>
+            <img id="imagem_boot" src="assets/imgs/icons-bootstrap.png"/>
             </div>
             <div class="card_back">
                 &lt/&gt
             </div>
-        </div> --> <!-- VAMOS DEIXAR ESSE TRECHO APENAS PRA SE BASEAR NO MODELO -->
+        </div> VAMOS DEIXAR ESSE TRECHO APENAS PRA SE BASEAR NO MODELO -->
     </div>
 
     <div id="gameOver">
