--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <button id="restart" onclick="restart()">Jogue novamente</button>
     </div>
 
-    <script src="assets/scripts/game.js"></script>
+    <script src="./assets/scripts/game.js"></script>
     <script src="./assets/scripts/script.js"></script>
 </body>
 </html>
